--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,17 @@
 @tailwind base;
+*::-webkit-scrollbar {
+  width: 10px;
+}
+*::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(229, 28, 28, 0.2);
+  border-radius: 14px;
+  border: 3px solid transparent;
+}
 @tailwind components;
 @tailwind utilities;
 
